fix img sizing bug on mobile

--- a/themes/shindig/static-src/css/article.css
+++ b/themes/shindig/static-src/css/article.css
@@ -24,6 +24,10 @@
     display: block;
     margin: 0 auto;
   }
+
+  & img {
+    height: auto;
+  }
 }
 
 .article__wide {
